Sidebar was added

--- a/markup/app/index.html
+++ b/markup/app/index.html
@@ -52,7 +52,11 @@
                     </div>
                 </div>
                 <aside class="main-sidebar">
-
+                    <h2 class="main-title">контакты</h2>
+                    <ul class="sidebar-list">Звоните:
+                        <li class="sidebar-item">8(800)555-93-99</li>
+                        <li class="sidebar-item">8(495)638-55-85</li>
+                    </ul>
                 </aside>
             </div>
             <div class="map-wrapper">
