--- a/markup/app/index.html
+++ b/markup/app/index.html
@@ -17,9 +17,14 @@
                     <strong class="logo-place">карьер</strong>
                 </h1>
                 <nav class="nav-holder">
+                   <div class="hidden-menu">
+                        <div class="hidden-menu-item"></div>
+                        <div class="hidden-menu-item"></div>
+                        <div class="hidden-menu-item"></div>
+                    </div>
                     <ul class="nav-list">
-                        <li class="nav-item"><a href="#">производство</a></li>
-                        <li class="nav-item"><a href="#">адрес карьера</a></li>
+                        <li class="nav-item"><a href="#to-production">производство</a></li>
+                        <li class="nav-item"><a href="#to-address">адрес карьера</a></li>
                     </ul>
                     <button class="call-order">Заказать звонок</button>
                 </nav>
@@ -29,13 +34,19 @@
                     <li class="banner-item">
                         <img src="images/banner-img.jpg" alt="should be image">
                     </li>
+                    <li class="banner-item">
+                        <img src="images/banner-img.jpg" alt="should be image">
+                    </li>
+                    <li class="banner-item">
+                        <img src="images/banner-img.jpg" alt="should be image">
+                    </li>
                 </ul>
             </div>
         </header>
         <main class="main">
             <div class="main-wrapper">
                 <div class="main-content">
-                    <div class="main-block">
+                    <div class="main-block" id="to-production">
                         <h2 class="main-title"><span class="main-title-area">Производим и продаем щебень</span></h2>
                         <p class="main-txt">
                             Площадь участка 96,1 га. Щебень и гравий из плотных пород для строительных работ. Прочность соответствует марке 800 (ДР-12). Запасы по гравию 28 %. Пески и пески-отсевы Богдановского-2 участка могут быть использованы в качестве строительного и дорожного материала. Мощность толщи 12-22,1 метра. Уровень грунтовых вод расположен ниже подошвы полезной толщи. Концентрация радионуклидов соответствует 1 классу СП 2.6.1.758-99. Щебень 20×40 пригоден в производстве бетона и изготовлении конструкций из него, для дорожного строительства при закладке фундамента зданий, при возведении производственных всех видов сооружений и др.
@@ -44,29 +55,33 @@
                             <strong>Щебень 20×40</strong> пригоден в производстве бетона и изготовлении конструкций из него, для дорожного строительства при закладке фундамента зданий, при возведении производственных всех видов сооружений и др.
                         </p>
                     </div>
-                    <div class="main-block">
+                    <div class="main-address-block" id="to-address">
                         <h2 class="main-title"><span class="main-title-area">Адрес карьера</span></h2>
                         <p class="main-address">
-                            <span class=".icon-map-pointer"></span>поселок Ханино, Суворовский район, Тульская область, Россия
+                            <span class="icon-map-pointer"></span>поселок Ханино, Суворовский район, Тульская область, Россия
                         </p>
                     </div>
                 </div>
                 <aside class="main-sidebar">
                     <h2 class="main-title">контакты</h2>
-                    <ul class="sidebar-list">Звоните:
-                        <li class="sidebar-item">8(800)555-93-99</li>
-                        <li class="sidebar-item">8(495)638-55-85</li>
+                    <ul class="sidebar-list"><strong class="sidebar-list-call">Звоните:</strong>
+                        <li class="sidebar-item">8(800)<strong>555-93-99</strong></li>
+                        <li class="sidebar-item">8(495)<strong>638-55-85</strong></li>
                     </ul>
                 </aside>
             </div>
-            <div class="map-wrapper">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18666.76157346492!2d36.599909448540174!3d54.209377328894846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4134840371e383e9%3A0x230bb794287d4212!2z0KXQsNC90LjQvdC-LCDQotGD0LvRjNGB0LrQsNGPINC-0LHQuy4sINCg0L7RgdGB0LjRjywgMzAxNDIw!5e0!3m2!1sru!2sua!4v1519203214963" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
+            <div id="map"></div>
         </main>
         <footer class="footer">
-
+            <div class="copy-wrapper">
+                <p class="copy">&#169; 2015, Copyright </p>
+            </div>
         </footer>
     </div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTPqm9c1-5UXkuq9LU2Asg-bCLLUAbfUw&callback=initMap"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
