Modal window was added

--- a/markup/app/index.html
+++ b/markup/app/index.html
@@ -17,7 +17,7 @@
                     <strong class="logo-place">карьер</strong>
                 </h1>
                 <nav class="nav-holder">
-                   <div class="hidden-menu">
+                    <div class="hidden-menu">
                         <div class="hidden-menu-item"></div>
                         <div class="hidden-menu-item"></div>
                         <div class="hidden-menu-item"></div>
@@ -26,7 +26,14 @@
                         <li class="nav-item"><a href="#to-production">производство</a></li>
                         <li class="nav-item"><a href="#to-address">адрес карьера</a></li>
                     </ul>
-                    <button class="call-order">Заказать звонок</button>
+                    <button class="call-order" id="go">Заказать звонок</button>
+                    <div class="modal-wrapper">    
+                        <div id="modal-form">
+                            <span id="modal-close">&#10060;</span>
+                            <p class="modal-txt">test</p>
+                        </div>
+                    </div>
+                    <div id="overlay"></div>
                 </nav>
             </div>
             <div class="banner-wrapper">
