--- a/markup/app/index.html
+++ b/markup/app/index.html
@@ -89,6 +89,7 @@
     </div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTPqm9c1-5UXkuq9LU2Asg-bCLLUAbfUw"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="js/main.js"></script>
 </body>
